# tg_bot_for_testing

./: README.md  __main__.py  pyproject.toml
FSMs/: FSM.py
handlers/: main_handlers.py  other_handlers.py
keyboards/: start.py
locales/ru/LC_MESSAGES/: txt.ftl
