[tool.poetry]
name = "tg-bot-for-testing"
version = "0.1.0"
description = ""
authors = ["kuziil <sikuz70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
environs = "^11.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-mypy = "^17.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
